# rust_gbc_emu

./: .gitignore  Cargo.toml  TODO  blargg_test_results.txt
src/: lib.rs  main.rs
src/debugger/: mod.rs
src/gbc/: cartridge.rs  debug.rs  memory_bus.rs  mmio.rs  mod.rs  ppu.rs  utils.rs
src/gbc/cpu/: instruction.rs  mod.rs  register.rs
src/gbc/mmio/: apu.rs  joypad.rs  lcd.rs  mod.rs  serial.rs  timer.rs
