[package]
name = "rust_gbc_emu"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "8.2.0"
clap = "2.33.0"
#ctrlc = "3.1.0"
#sdl2 = "0.34.5"

[dependencies.sdl2]
version = "0.34.5"
default-features = false
features = ["gfx"]

[profile.release]
debug = 1
