[package]
name = "rust_gbc_emu"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "8.2.0"
clap = "2.33.0"
parse_int = {features = ["implicit-octal"], version = "0.5.0"}

[dependencies.sdl2]
version = "0.34.5"
default-features = false
features = ["gfx"]

[profile.release]
debug = 1
